and testing canceling of pipeline

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -425,10 +425,7 @@ jobs:
     timeout-minutes: 15
     needs: [ "setup_variables", "tests" ]
     if: |
-      always() && 
-      !contains(needs.*.result, 'failure') &&
-      !contains(needs.*.result, 'canceled') &&
-      inputs.PoChujMiBuildImage
+      always() && (!contains(needs.*.result, 'failure') && !contains(needs.*.result, 'canceled') ) && inputs.PoChujMiBuildImage
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
