--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -177,7 +177,7 @@ jobs:
           && sudo apt update \
           && sudo apt install gh -y)
           minutes=`gh api -H "Accept: application/vnd.github+json" /orgs/easir/settings/billing/actions | jq ".total_minutes_used"`
-          if (( $minutes < 2900 ))
+          if (( $minutes < 2700 ))
           then 
           export runners="ubuntu-latest"
           else
@@ -249,7 +249,7 @@ jobs:
     needs: setup_variables
     env: 
      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
-    runs-on: ${{needs.setup_variables.outputs.runners}}
+    runs-on: ubuntu-latest #${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
       - name: pull code
