--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -244,7 +244,7 @@ jobs:
           rebuildManifest: ${{ steps.did-manifest-change.outputs.any_changed }} \
           github-sha: ${{ steps.imagetag.outputs.github-sha }}" >> $GITHUB_STEP_SUMMARY
 
-  tests:
+  tests-php:
     if: ${{ inputs.SkipTests != true }}
     needs: setup_variables
     env: 
@@ -304,8 +304,21 @@ jobs:
         run: |
           composer exec -- psalm --long-progress
 
+  tests-nodejs:
+    if: ${{ inputs.SkipTests != true && inputs.ApplicationLanguage == 'nodejs'}} 
+    needs: setup_variables
+    env: 
+     GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
+    runs-on: ubuntu-latest #${{needs.setup_variables.outputs.runners}}
+    timeout-minutes: 15
+    steps:
+      - name: pull code
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.numa-numa-token }}
+          submodules: recursive
+          
       - name: node
-        if: inputs.ApplicationLanguage == 'nodejs'
         uses: addnab/docker-run-action@v3
         with:
           image: node:${{ inputs.NodeVersion }} 
@@ -318,7 +331,7 @@ jobs:
             npm run build
 
       - name: karma tests
-        if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableKarmaTests
+        if: true && !inputs.DisableKarmaTests
         uses: addnab/docker-run-action@v3
         with:
           image: buildkite/puppeteer:latest
