--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -117,6 +117,10 @@ on:
         type: string
         default: ""
         required: false
+      SkipPhpcs:
+        type: boolean
+        default: false
+        required: false
 
     secrets:
       token:
@@ -280,7 +284,7 @@ jobs:
           make ${{ inputs.UseMakeTargets }} -O -k
 
       - name: phpcs
-        if: (success() || failure()) && inputs.ApplicationLanguage == 'php'
+        if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && !SkipPhpcs
         run: |
           composer exec -- phpcs ${{ inputs.PhpcsWorkdir }}
 
