--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -121,6 +121,15 @@ on:
         type: boolean
         default: false
         required: false
+      EnableMysql:
+        type: boolean
+        default: false
+        required: false
+      EnableRedis:
+        type: boolean
+        default: false
+        required: false
+      
 
     secrets:
       token:
@@ -255,6 +264,17 @@ jobs:
      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
+    services:
+      redis:
+        image: redis:3.2.3-alpine
+        ports: 6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          --appendonly yes
+          
     steps:
       - name: pull code
         uses: actions/checkout@v3
