--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -268,7 +268,7 @@ jobs:
     services:
       redis:
         image: redis:3.2.3-alpine
-        ports: 6379
+        ports: "6379"
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
