network host for services

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -274,12 +274,15 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          --network host
+
       mariadb:
         image: mariadb:10.1.16
         ports:
           - 3306
         options: >-
           --env MYSQL_ROOT_PASSWORD=root
+          --network host
 
 
     steps:
