--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -32,7 +32,7 @@ on:
         required: false
       RunBehatTests:
         type: boolean
-        required: false        
+        required: false
         default: false
       PhpVersion:
         required: false
@@ -63,7 +63,7 @@ on:
         required: false
         default: ""
         description: "Name of a Sentry Project to use"
-      EnableSentryRelease: 
+      EnableSentryRelease:
         type: boolean
         required: false
         default: false
@@ -150,9 +150,9 @@ on:
       npmrc:
         required: false
   workflow_dispatch:
-    
 
-  
+
+
 jobs:
   setup_variables:
     timeout-minutes: 5
@@ -260,14 +260,14 @@ jobs:
   tests-php:
     if: ${{ inputs.SkipTests != true }}
     needs: setup_variables
-    env: 
+    env:
      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     services:
       redis:
         image: redis:3.2.3-alpine
-        ports: 
+        ports:
           - 6379:6379
         options: >-
           --health-cmd "redis-cli ping"
@@ -294,7 +294,7 @@ jobs:
           php-version: ${{inputs.PhpVersion}}
           extensions: ${{inputs.PhpExtensions}}
           coverage: pcov
-          tools: behat, phpunit, composer, phpcs, php-cs-fixer, phpcbf, phpstan, psalm, phplint, 
+          tools: behat, phpunit, composer, phpcs, php-cs-fixer, phpcbf, phpstan, psalm, phplint,
         env:
           runner: ${{needs.setup_variables.outputs.runners}}
 
@@ -329,21 +329,21 @@ jobs:
         if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && inputs.SkipUnitTests != true
         run: |
           composer exec -- phpunit
-      
+
       - name: phpstan
         if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && inputs.SkipUnitTests != true && inputs.EnablePhpstan
         run: |
           composer exec -- phpstan analyse
-      
+
       - name: psalm
         if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && inputs.SkipUnitTests != true && inputs.EnablePsalm
         run: |
           composer exec -- psalm --long-progress
 
   tests-nodejs:
-    if: ${{ inputs.SkipTests != true && inputs.ApplicationLanguage == 'nodejs'}} 
+    if: ${{ inputs.SkipTests != true && inputs.ApplicationLanguage == 'nodejs'}}
     needs: setup_variables
-    env: 
+    env:
      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ubuntu-latest #${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
@@ -357,7 +357,7 @@ jobs:
       - name: node
         uses: addnab/docker-run-action@v3
         with:
-          image: node:${{ inputs.NodeVersion }} 
+          image: node:${{ inputs.NodeVersion }}
           options: -v ${{ github.workspace }}:/work -e APPCONFIG_API=//api.domain" -e APPCONFIG_SOCKETAUTH="//api.domain/socket" -e APPCONFIG_UPLOAD="//api.domain" -e CONFIG_API_URL="http://api.domain" -e CONFIG_AUTH_URL="http://api.domain/token"
           run: |
             cd /work/
@@ -380,7 +380,7 @@ jobs:
         if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
         uses: addnab/docker-run-action@v3
         with:
-          image: node:${{ inputs.NodeVersion }} 
+          image: node:${{ inputs.NodeVersion }}
           options: -v ${{ github.workspace }}:/work
           run: |
             cd /work/
@@ -390,7 +390,7 @@ jobs:
         if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
         uses: addnab/docker-run-action@v3
         with:
-          image: node:${{ inputs.NodeVersion }}-alpine 
+          image: node:${{ inputs.NodeVersion }}-alpine
           options: -v ${{ github.workspace }}:/work
           run: |
             cd /work/
@@ -410,7 +410,7 @@ jobs:
   behat:
     if: inputs.RunBehatTests
     needs: setup_variables
-    env: 
+    env:
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
@@ -429,17 +429,17 @@ jobs:
       - name: lets fire up the app
         env:
           SHELL_VERBOSITY: "-1"
-        run: whoami && mkdir www && sudo php -d error_reporting="E_ALL & ~E_NOTICE & ~E_DEPRECATED" -S 0.0.0.0:8000 -t www public/index.php &           
-       
+        run: whoami && mkdir www && sudo php -d error_reporting="E_ALL & ~E_NOTICE & ~E_DEPRECATED" -S 0.0.0.0:8000 -t www public/index.php &
+
       - name: and test it
         uses: php-actions/behat@v1
-    
+
   manifest-generate:
     timeout-minutes: 5
     needs: setup_variables
     runs-on: ${{needs.setup_variables.outputs.runners}}
     if: needs.setup_variables.outputs.rebuildManifest == 'true'
-    container: 
+    container:
       image: docker-registry.easir.com/manifest:master-edc5d03a8b7a4530442e23d2bd87c0833b4bd0bd
       credentials:
           username: ${{secrets.docker-login}}
@@ -458,7 +458,7 @@ jobs:
   #   steps:
   #     - name: test
   #       if: |
-  #         always() && 
+  #         always() &&
   #         !contains(needs.*.result, 'failure') &&
   #         !contains(needs.*.result, 'canceled') &&
   #         inputs.SkipImageBuild
@@ -472,10 +472,10 @@ jobs:
       !contains(needs.*.result, 'failure') &&
       !contains(needs.*.result, 'canceled') &&
       !inputs.SkipImageBuild
-    env: 
+    env:
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
-    steps:    
+    steps:
       # - name: Import secrets for DEV
       #   if: ${{ steps.environment.outputs.environment }} = "dev"
       #   uses: mcmarkj/1password-actions@v2
@@ -538,7 +538,7 @@ jobs:
         with:
           registry: ${{ secrets.docker-reg }}
           username: ${{ secrets.docker-login }}
-          password: ${{ secrets.docker-pass }} 
+          password: ${{ secrets.docker-pass }}
           ecr: false
 
       - name: Build and push Docker images
@@ -558,10 +558,26 @@ jobs:
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.numa-numa-token }}
           github-token: ${{ secrets.numa-numa-token }}
-    
+
       - name: summary
         run: |
           echo IMAGE_VERSION: ${{ needs.setup_variables.outputs.github-sha }} >> $GITHUB_STEP_SUMMARY
           echo "IMAGE TAGS : ${{ steps.meta.outputs.tags }} >> $GITHUB_STEP_SUMMARY"
 
-
+  sentry-release:
+    timeout-minutes: 5
+    needs: [ "setup_variables", "build-image" ]
+    if: inputs.EnableSentryRelease && needs.setup_variables.outputs.environment == 'prod'
+    env:
+      GITHUB_TOKEN: ${{ secrets.token }}
+    runs-on: ${{needs.setup_variables.outputs.runners}}
+    steps:
+      - name: Sentry Release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ inputs.SentryOrganisation }}
+          SENTRY_PROJECT: ${{ inputs.SentryProjectName }}
+        with:
+          environment: ${{ inputs.SentryTargetEnvironment }}
+          version: ${{ needs.setup_variables.outputs.github-sha }}
