--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -585,7 +585,7 @@ jobs:
       - name: Sentry Release
         uses: getsentry/action-release@v1
         env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.sentry-auth-token }}
           SENTRY_ORG: ${{ inputs.SentryOrganisation }}
           SENTRY_PROJECT: ${{ inputs.SentryProjectName }}
         with:
