--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -573,6 +573,7 @@ jobs:
         run: |
           echo IMAGE_VERSION: ${{ needs.setup_variables.outputs.github-sha }} >> $GITHUB_STEP_SUMMARY
           echo "IMAGE TAGS : ${{ steps.meta.outputs.tags }} >> $GITHUB_STEP_SUMMARY"
+          echo "    {{ inputs.EnableSentryRelease && needs.setup_variables.outputs.environment == 'prod' }}"
 
   sentry-release:
     timeout-minutes: 5
