proper move of artifact

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -486,7 +486,9 @@ jobs:
     if: |
       always() && 
       !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'Failure') &&
       !contains(needs.*.result, 'canceled') &&
+      !contains(needs.*.result, 'Canceled') &&
       !inputs.SkipImageBuild
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
