--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -582,7 +582,7 @@ jobs:
   sentry-release:
     timeout-minutes: 5
     needs: [ "setup_variables", "build-image" ]
-    if: ${{ inputs.EnableSentryRelease }}
+    if: ${{ inputs.EnableSentryRelease == true }}
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
