testing some node things

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -362,6 +362,8 @@ jobs:
           run: |
             cd /work/
             rm -f .npmrc
+            pwd
+            ls -al ./
             echo "${{secrets.npmrc}}" > .npmrc
             npm install
             npm run build
