EZR-12173 NPM auth

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -368,7 +368,7 @@ jobs:
             echo "${{secrets.npmrc}}" > .npmrc
             chmod 666 .npmrc
             ls -al ./
-            npm login
+#            npm login
             npm install -include=dev
             npm run build
             cat /root/.npm/_logs/*.log
