--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -357,7 +357,7 @@ jobs:
       - name: node
         uses: addnab/docker-run-action@v3
         env:
-          NODE_AUTH_TOKEN: ${{secrets.numa-numa-token}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
           image: node:${{ inputs.NodeVersion }}
           options: -v ${{ github.workspace }}:/work -e APPCONFIG_API=//api.domain" -e APPCONFIG_SOCKETAUTH="//api.domain/socket" -e APPCONFIG_UPLOAD="//api.domain" -e CONFIG_API_URL="http://api.domain" -e CONFIG_AUTH_URL="http://api.domain/token"
