--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -181,7 +181,7 @@ jobs:
       - name: how meny already paid minutes we have on github action runners?
         id: runners
         if: inputs.ForceSelfHosted == false
-        run: | 
+        run: |
           type -p gh >/dev/null || (type -p curl >/dev/null || sudo apt install curl -y
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
           && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
@@ -205,7 +205,7 @@ jobs:
 
       - name: prod or not?
         id: environment
-        run: | 
+        run: |
           if [[ $GITHUB_REF_NAME = "master" ]]
             then
               export environment=prod
@@ -261,7 +261,7 @@ jobs:
     if: ${{ inputs.SkipTests != true && inputs.ApplicationLanguage == 'php'}}
     needs: setup_variables
     env:
-     GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
+      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     services:
@@ -343,9 +343,17 @@ jobs:
   tests-nodejs:
     if: ${{ inputs.SkipTests != true && inputs.ApplicationLanguage == 'nodejs'}}
     needs: setup_variables
+    container:
+      image: node:${{ inputs.NodeVersion }}
+      env:
+        APPCONFIG_API: "//api.domain"
+        APPCONFIG_SOCKETAUTH: "//api.domain/socket"
+        APPCONFIG_UPLOAD: "//api.domain"
+        CONFIG_API_URL: "http://api.domain"
+        CONFIG_AUTH_URL: "http://api.domain/token"
     env:
-     GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
-    runs-on: ubuntu-latest #${{needs.setup_variables.outputs.runners}}
+      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
+    runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
       - name: pull code
@@ -353,61 +361,57 @@ jobs:
         with:
           token: ${{ secrets.numa-numa-token }}
           submodules: recursive
+      - name: prepare npmrc
+        run: |
+          rm -f .npmrc
+          pwd
+          ls -al ./
+          echo "${{ secrets.npmrc }}" > .npmrc
+          chmod 666 .npmrc
 
       - name: node
-        uses: addnab/docker-run-action@v3
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        with:
-          image: node:${{ inputs.NodeVersion }}
-          options: -v ${{ github.workspace }}:/work -e APPCONFIG_API=//api.domain" -e APPCONFIG_SOCKETAUTH="//api.domain/socket" -e APPCONFIG_UPLOAD="//api.domain" -e CONFIG_API_URL="http://api.domain" -e CONFIG_AUTH_URL="http://api.domain/token"
-          run: |
-            cd /work/
-            rm -f .npmrc
-            apt install -y libc6-compat bash make gcc g++ python3 python2 cyrus-sasl-dev pkgconf librdkafka-dev
-            npm install -include=dev
-            npm run build
-            cat /root/.npm/_logs/*.log
+# apt install -y libc6-compat bash make gcc g++ python3 python2 cyrus-sasl-dev pkgconf librdkafka-dev
+        run: |
+          npm install -include=dev
+          echo **** npm run build
+          npm run build
 
-      - name: karma tests
-        if: true && !inputs.DisableKarmaTests
-        uses: addnab/docker-run-action@v3
-        with:
-          image: buildkite/puppeteer:latest
-          options: -v ${{ github.workspace }}:/work
-          run: |
-            cd /work/
-            npm run test:karma --no-sandbox
+      # - name: karma tests
+      #   if: true && !inputs.DisableKarmaTests
+      #   uses: addnab/docker-run-action@v3
+      #   with:
+      #     image: buildkite/puppeteer:latest
+      #     options: -v ${{ github.workspace }}:/work
+      #     run: |
+      #       cd /work/
+      #       npm run test:karma --no-sandbox
 
-      - name: jest tests
-        if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
-        uses: addnab/docker-run-action@v3
-        with:
-          image: node:${{ inputs.NodeVersion }}
-          options: -v ${{ github.workspace }}:/work
-          run: |
-            cd /work/
-            npm run test:jest ${{ inputs.AdditionalJestParameters }}
+      # - name: jest tests
+      #   if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
+      #   uses: addnab/docker-run-action@v3
+      #   with:
+      #     image: node:${{ inputs.NodeVersion }}
+      #     options: -v ${{ github.workspace }}:/work
+      #     run: |
+      #       cd /work/
+      #       npm run test:jest ${{ inputs.AdditionalJestParameters }}
 
-      - name: jest jscs
-        if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
-        uses: addnab/docker-run-action@v3
-        with:
-          image: node:${{ inputs.NodeVersion }}-alpine
-          options: -v ${{ github.workspace }}:/work
-          run: |
-            cd /work/
-            node_modules/.bin/jscs --config=.jscsrc src/app
+      # - name: jest jscs
+      #   if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
+      #   uses: addnab/docker-run-action@v3
+      #   with:
+      #     image: node:${{ inputs.NodeVersion }}-alpine
+      #     options: -v ${{ github.workspace }}:/work
+      #     run: |
+      #       cd /work/
+      #       node_modules/.bin/jscs --config=.jscsrc src/app
 
       - name: eslint
         if: inputs.ApplicationLanguage == 'nodejs'
-        uses: addnab/docker-run-action@v3
-        with:
-          image: node:${{ inputs.NodeVersion }}-alpine
-          options: -v ${{ github.workspace }}:/work
-          run: |
-            cd /work/
-            npm run test:eslint
+        run: |
+          cd /work/
+          npm install -g eslint
+          npm run test:eslint
 
 
   behat:
@@ -455,8 +459,8 @@ jobs:
     container:
       image: docker-registry.easir.com/manifest:master-edc5d03a8b7a4530442e23d2bd87c0833b4bd0bd
       credentials:
-          username: ${{secrets.docker-login}}
-          password: ${{secrets.docker-pass}}
+        username: ${{secrets.docker-login}}
+        password: ${{secrets.docker-pass}}
     steps:
       - name: pull code
         uses: actions/checkout@v3
