--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -372,12 +372,13 @@ jobs:
           node-version: ${{ inputs.NodeVersion }}
           registry-url: 'https://npm.pkg.github.com'
           scope: '@easir'
-          token: ${{ secrets.numa-numa-token }}
       - name: node
         run: |
           npm install -include=dev
           echo **** npm run build
           npm run build
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.numa-numa-token }}
 
       # - name: karma tests
       #   if: true && !inputs.DisableKarmaTests
