--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -368,6 +368,7 @@ jobs:
           echo //npm.pkg.github.com/:_authToken=${{ secrets.numa-numa-token }} > .npmrc
           echo @easir:registry=https://npm.pkg.github.com >> .npmrc
           cat .npmrc
+          sleep 300
       - name: node
         run: |
           npm install -include=dev
