--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -365,10 +365,9 @@ jobs:
       - run: |
           pwd
           ls -al ./
-          echo //npm.pkg.github.com/:_authToken=${{ secrets.numa-numa-token }} > .npmrc
+          echo //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }} > .npmrc
           echo @easir:registry=https://npm.pkg.github.com >> .npmrc
           cat .npmrc
-          sleep 300
       - name: node
         run: |
           npm install -include=dev
