--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -365,7 +365,7 @@ jobs:
       - run: |
           pwd
           ls -al ./
-          echo //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }} > .npmrc
+          echo //npm.pkg.github.com/:_authToken=${{ secrets.numa-numa-token }} > .npmrc
           echo @easir:registry=https://npm.pkg.github.com >> .npmrc
           cat .npmrc
           sleep 300
