--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -350,7 +350,7 @@ jobs:
       CONFIG_API_URL: "http://api.domain"
       CONFIG_AUTH_URL: "http://api.domain/token"
       GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
-    runs-on: ${{needs.setup_variables.outputs.runners}}
+    runs-on: self-hosted #${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
       - name: pull code
