--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -365,10 +365,8 @@ jobs:
       - run: |
           pwd
           ls -al ./
-          echo @easir:registry=https://npm.pkg.github.com > .npmrc
+          echo ${{ secrets.npmrc }} > .npmrc
       - name: node
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.numa-numa-token }}
         run: |
           npm install -include=dev
           echo **** npm run build
